--- a/offline.html
+++ b/offline.html
@@ -6,35 +6,35 @@
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<title>Offline</title>
 	<style>
-		html {
-			background: #f1f1f1;
-		}
+    html {
+      background: #f1f1f1;
+    }
 
-		main {
-			background: #fff;
-			color: #444;
-			font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-			margin: 2em auto;
-			padding: 1em 2em;
-			max-width: 700px;
-			-webkit-box-shadow: 0 1px 3px rgba(0,0,0,0.13);
-			box-shadow: 0 1px 3px rgba(0,0,0,0.13);
-		}
+    main {
+      background: #fff;
+      color: #444;
+      font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+      margin: 2em auto;
+      padding: 1em 2em;
+      max-width: 700px;
+      -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.13);
+      box-shadow: 0 1px 3px rgba(0, 0, 0, 0.13);
+    }
 
-		h1 {
-			border-bottom: 1px solid #dadada;
-			clear: both;
-			color: #666;
-			font-size: 24px;
-			margin: 30px 0 0 0;
-			padding: 0 0 7px;
-		}
+    h1 {
+      border-bottom: 1px solid #dadada;
+      clear: both;
+      color: #666;
+      font-size: 24px;
+      margin: 30px 0 0 0;
+      padding: 0 0 7px;
+    }
 
-		p {
-			font-size: 14px;
-    		line-height: 1.5;
-    		margin: 25px 0 20px;
-		}
+    p {
+      font-size: 14px;
+      line-height: 1.5;
+      margin: 25px 0 20px;
+    }
 	</style>
 </head>
 <body>
